--- a/src/app/cases/cases-form/cases-form.component.html
+++ b/src/app/cases/cases-form/cases-form.component.html
@@ -74,5 +74,5 @@
 
   <h1 *ngIf="id">Komentarze</h1>
   <app-case-comments *ngIf="id"></app-case-comments>
-  <button (click)="submit()" mat-raised-button color="primary">Zatwierdź</button>
+  <button [disabled]="form.invalid" (click)="submit()" mat-raised-button color="primary">Zatwierdź</button>
 </form>
